--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "@reduxjs/toolkit": "^1.9.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^8.1.3",
+        "react-redux": "^8.1.2",
         "react-router-dom": "^6.16.0"
     }
 }
