--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.2",
-        "react-router-dom": "^6.16.0"
+        "react-router-dom": "^6.16.0",
+        "react-custom-scrollbars-2": "^4.5.0",
+        "axios": "^1.5.1",
+        "classnames": "^2.3.2"
     }
 }
